Spacing and sizing fixes for different screen sizes.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,10 +1,9 @@
 html, body {
 	height: 100%;
-	font-size: 100%;
+	font-size: 50%;
 }
 
 body {
-  background-color: black;
   color: white;
   font-family: helvetica, sans-serif;
   text-align: center;
@@ -18,18 +17,40 @@ body {
 	vertical-align: middle;
 }
 
+.panel-1 {
+    background-color: #00ccff;
+}
+
+.locations {
+  margin: 5% 0;
+}
+
+.locations h1 {
+  font-size: 6em;
+  margin: 0;
+}
+
+.locations h1 span {
+  display: block;
+}
+
+.timer h3 {
+  font-size: 5em;
+  margin: 0;
+}
+
 /*Ideally, use new vw font size measurement, for fonts that scale with screen width.
 As this is only chrome webview etc. (ie. Android 4.4 Kitkat+), we make do with media queries...*/
 #timeToNextBus {
   /*font-size: 20vw;*/
-  font-size: 20em;
+  font-size: 15em;
   margin: 0;
 }
 
 #busTimes li#nextBusTime {
 	/*font-size: 5vw;*/
 	/*font-size: 5em;  */
-  color: greenyellow;
+  color: #ccff00;
 }
 
 .imminent {
@@ -47,30 +68,40 @@ ol {
 
 #busTimes li {
 	margin-right: 1em;
-  font-size: 4em;
+  font-size: 5em;
 }
 
 .times-list-wrapper {
   width: 50%;
   margin: 0 auto;
   overflow-y: auto;
-  height: 20em;
+  height: 30em;
+  margin-top: 5%;
 }
 
+@media (min-width: 330px) {
+  html, body {font-size: 55%;}
 
-@media (max-width: 80em) {
-  html, body {font-size: 66%;}
 }
 
-@media (max-width: 40em) {
-  html, body {font-size: 50%;}
-}
+@media (min-width: 768px) {
+  html, body {font-size: 70%;}
 
-@media (max-width: 20em) {
-  html, body {font-size: 20%;}
+  .locations {
+    margin-bottom: 50px;
+    margin-top: -100px;
+  }
+
+  .locations h1 span {
+    display: inline;
+  }
 
   .times-list-wrapper {
-    overflow-y: auto;
+    width: 400px;
+    overflow-y: none;
+    margin-top: 30px
   }
+
 }
+
 
